--- a/css2/style.css
+++ b/css2/style.css
@@ -25,3 +25,14 @@ h2,h1{
     color:orange;
     font-weight:bold;
 }
+.box{
+    width: 300px;
+    height: 300px;
+    background-color:blue;
+    padding: 20px;
+    /* border-width: 3px;
+    border-style: solid;
+    border-color: black; */
+    border: 3px solid black;
+    margin: 25px;
+}
