--- a/css2/style.css
+++ b/css2/style.css
@@ -30,7 +30,7 @@ h1 {
   font-weight: bold;
 }
 .box {
-  position: absolute;
+  position: relative;
   display: inline-block;
   width: 300px;
   height: 300px;
@@ -56,6 +56,7 @@ img {
   display: block;
   margin: 0 auto;
   width: 500px;
+  /* float: left;//для обтікання тексту */
 }
 nav {
   position: inherit; /*inherit-для наслідування властивостей батьківського елемента*/
@@ -77,4 +78,5 @@ nav {
   position: absolute;
   left: 130px;
   z-index: 4;
+  height: 150px;
 }
