--- a/css2/style.css
+++ b/css2/style.css
@@ -32,6 +32,7 @@ h1 {
 .box {
   position: relative;
   display: inline-block;
+  vertical-align: middle;
   width: 300px;
   height: 300px;
   background-color: blue;
@@ -75,8 +76,24 @@ nav {
 }
 .red {
   background-color: red;
-  position: absolute;
-  left: 130px;
+  position: relative;
+  /*left: 130px;*/
   z-index: 4;
-  height: 150px;
+  /*height: 150px;*/
+}
+
+.form_add {
+  position: relative;
+  display: inline-block;
+  vertical-align: middle;
+  width: 300px;
+  height: 300px;
+  background-color: blue;
+  padding: 20px;
+  /* border-width: 3px;
+      border-style: solid;
+      border-color: black; */
+  border: 3px solid black;
+  margin: 25px;
+  z-index: 3;
 }
